--- a/css/style.css
+++ b/css/style.css
@@ -1,84 +1,264 @@
-html,
+	html{
+	    font-family: Titillium Web, GillSans, Calibri, Trebuchet, sans-serif !important;
+	    padding: 0;
+	  }
+
 	body{
-		font-family: Arial, sans-serif;
+		font-family: 'Titillium Web', sans-serif;
+		font-weight: 300;
 		height: 100%;
 		margin:0;
 		padding:0;
 	}
 
-	.topbar{
-		height: 50px;
+	.row .col{
+		padding: 0;
+	}
+
+	h4#page-title{
+		font-size:40px;
+		color:#74DAAD;
+		display: inline-block;
+	}
+
+	#logo{
+		font-size:40px;
+		
+		color:#74DAAD;
+	}
+
+	p#intro{
+		color:#F2F2F2;
+	}
+
+@media only screen and (max-width: 992px) {
+    p#intro {
+        margin:0;
+    }
+
+    #menuicon-wrapper{
+		position: absolute;
+		top:10;
+		z-index: 5;
+		background-color: transparent;
+		border-bottom: none;
+		padding: 0;
+		margin: 0;
+	}
+}
+
+	#menuicon-wrapper{
+		margin:10px;
+	}
+
+	i#menuicon{
+		color: #F2F2F2;
+		font-size:30px;
+		font-weight: 400;
+
+	}
+
+	.collapsible-body{
+		background-color:#333333;
+		z-index: 1;
 		width: 100%;
-		z-index: 2;
-		overflow: hidden;
-		background: #fff;
-		position: fixed;
-		border-bottom: solid 1px #f1f1f1;
-		padding-left: 30px;
+		height: 100%;
+		position: absolute;
+		top:200px;
+		border: 0;
+		left: 0;
+
 	}
 
-	input[type="search"]{
+	input#search[type="search"]{
 	  -webkit-appearance:none;
-	  outline-width: 0;
-	  font-weight: 400;
-	  font-size: 20px;
+	  margin-top:10px;
+	  margin-bottom: 10px; 
+	  font-weight: 300;
+	  font-size: 15px;
+	  height: 30px;
+	  color:#fff;
 	}
 
-	.sidebar{
+	input#search[type="search"]:focus{
+	  -webkit-appearance:none;
+	  background:none;
+	}
+
+	#searchicon{
+		position: absolute;
+		top:15px;
+		font-size:20px;
+		color:#F2F2F2;
+	}
+
+	#sidebar{
 		height:100%;
-		width:30%;
-		color:#000!important;
-		background-color:#f1f1f1!important;
-		position:fixed!important;
+		/*opacity: 0.9;*/
+		background-color:#333333!important;
+		position:absolute;!important;
 		z-index:1;
-		overflow:hidden;
-		top: 50px;
-		text-align: center;
-    	border-right: solid 1px #f1f1f1;
+		overflow-y: scroll;
+		padding: 0 30px 20px 30px;
+		top: 0;
+
 	}
 
-	input#search{
+@media only screen and (max-width: 992px) {
+    #sidebar {
+        height: 200px;
+    }
+
+    .row{
+    	margin-bottom: 0;
+    }
+}
+
+	div#map-container{
+		position: fixed;
+		overflow: hidden;
 		height: 100%;
-		border: none;
+		padding-left: 0;
+		padding-right: 0;
 	}
 
-	.map-container{
-		height: 100%;
-    width: 70%;
-    float: right;
+@media only screen and (max-width: 992px) {
+	div#map-container{
+		position: absolute;
+		top:200px;
+		height: -moz-calc(100% - (200px));
+	    height: -webkit-calc(100% - (200px));
+	    height: calc(100% - (200px));
 	}
+}
 
 	#map{
-		height: 100%;
+		height: 100vh;
 		z-index: 0;
 	}
 
 	ul.list-items{
+		font-size:15px;
+		color:#F2F2F2;
 		list-style: none;
 		text-align: left;
 		-webkit-padding-start:0;
 	}
 
 	.list-items >li:hover{
-		background-color: #fff;
+		color:#74DAAD;
 		cursor: default;
 	}
 
 	.list-items >li{
 		line-height: 50px;
 		width: 100%;
-		padding-left: 50px;
 	}
 
 	.selected{
-		background-color: #fff;
+		color: #74DAAD;
 	}
 
-	.notselected{
-		background-color: #f1f1f1;
+
+	.gm-style{
+		font-family: Titillium Web, sans-serif !important;
 	}
 
-	#page-title{
+	.gm-style-iw {
+	   min-width: 300px !important;
+	}
+
+/*styling infowindow */
+
+	div.row.content{
+		margin: 10px 0px 10px 0px;
+		width: 400px;
+	}
+
+@media only screen and (max-width: 992px) {
+
+	img.location-img{
+		width: 100px;
+	}
+
+	div.row.content{
+		width: 300px;
+	}
+}
+
+	p.location-name{
+		margin: 0;
+		font-weight: 500;
+		font-size: 20px;
+		color:#000;
+	}
+
+	.btn.location-category{
+		height:25px;
+		border-radius: 3px;
+		display: inline;
+	}
+
+	a.btn.location-category{
+		margin:0;
+		padding: 5px;
+		font-size: 10px;
+		color:#f2f2f2;
+		background-color:#00bfa5;
+		box-shadow:0 0 0 0; 
+		-webkit-box-shadow: 0 0 0 0; 
+	}
+
+	a.btn.location-category:hover{
+		cursor: default;
+	}
+
+	#locationicon{
+		font-size:13px;
+	}
+
+	p.location-address{
+		margin:0;
+		font-size: 12px;
+		font-weight: 200;
+		color:#333333;
+	}
+
+	p.description-type{
+		margin:0;
+		text-transform: uppercase;
+		font-size: 12;
+		font-weight: 700;
+		color:#333333;
+	}
+
+	p.location-description{
+		margin: 0;
+	}
+
+	p.location-tip{
+		margin:0;
+	}
+
+	.infofooter img{
+		height:25px;
+		margin-left: auto;
+		margin-right: auto;
+		display: block;
+	}
+	
+	p.error{
+		font-size: 20px;
+		color: #ff0000;
+	}
+	#footer{
+		position: absolute;
+		bottom: 10px;
+		z-index: 3;
 		width: 100%;
-		font-size: 30px;
+	}
+
+	a.footer-link{
+		color:#74DAAD;
+		font-weight: 500;
 	}
